--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-wxeap",
-  "version": "0.7.7",
+  "version": "0.7.8",
   "description": "cnwxsoft web framework",
   "scripts": {
     "build": "babel src --out-dir lib"
@@ -25,9 +25,9 @@
   "devDependencies": {
     "babel-core": "^6.24.0",
     "babel-loader": "^6.2.4",
+    "babel-plugin-import": "^1.1.1",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
-    "babel-preset-stage-0": "^6.22.0",
-    "babel-plugin-import": "^1.1.1"
+    "babel-preset-stage-0": "^6.22.0"
   }
 }
