--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-wxeap",
-  "version": "0.7.8",
+  "version": "0.8.1",
   "description": "cnwxsoft web framework",
   "scripts": {
     "build": "babel src --out-dir lib"
@@ -10,17 +10,18 @@
   "license": "MIT",
   "dependencies": {
     "antd-mobile": "^1.0.7",
+    "babel-polyfill": "6.23.0",
     "dva": "^1.2.1",
+    "mobile-detect": "^1.3.6",
+    "moment": "2.18.1",
     "rc-animate": "^2.3.3",
     "rc-form": "^1.3.1",
     "rc-tween-one": "^1.1.2",
+    "re-carousel": "^1.2.7",
     "react": "^15.4.0",
     "react-dom": "^15.4.0",
     "react-pinch-zoom-pan": "^1.3.0",
-    "re-carousel": "^1.2.7",
-    "reactcss": "^1.1.2",
-    "babel-polyfill": "6.23.0",
-    "moment": "2.18.1"
+    "reactcss": "^1.1.2"
   },
   "devDependencies": {
     "babel-core": "^6.24.0",
