--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "cnwxsoft web framework",
   "scripts": {
     "pb": "npm run build && npm publish",
-    "build": "babel src --out-dir lib"
+    "build": "npm run lint && babel src --out-dir lib",
+    "lint": "eslint --ext .js src --fix"
   },
   "main": "lib/index.js",
   "author": "cnwxsoft",
@@ -25,11 +26,14 @@
     "reactcss": "^1.1.2"
   },
   "devDependencies": {
+    "babel-eslint": "^7.1.1",
     "babel-core": "^6.24.0",
     "babel-loader": "^6.2.4",
     "babel-plugin-import": "^1.1.1",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
-    "babel-preset-stage-0": "^6.22.0"
+    "babel-preset-stage-0": "^6.22.0",
+    "eslint": "^3.12.2",
+    "eslint-plugin-react": "^6.8.0"
   }
 }
