--- a/.eslintrc
+++ b/.eslintrc
@@ -29,6 +29,7 @@
     ],
     "no-empty-function": 2,
     "no-empty-pattern": 2,
+    "no-var": 2,
     "no-empty": 2,
     "no-const-assign": 2,
     "no-dupe-class-members": 2,
