--- a/.eslintrc
+++ b/.eslintrc
@@ -42,10 +42,7 @@
       "error",
       "never"
     ],
-    "block-spacing": [
-      "error",
-      "always"
-    ],
+    "key-spacing": 2,
     "brace-style": [
       "error",
       "1tbs"
@@ -72,9 +69,10 @@
       "error",
       "always"
     ],
-    "spaced-comment": 0,
-    "space-infix-ops": 0,
-    "space-in-parens": 0
+    "spaced-comment": 2,
+    "space-infix-ops": 2,
+    "space-in-parens": 2,
+    "block-spacing": "error"
   },
   "parserOptions": {
     "ecmaFeatures": {
