--- a/.eslintrc
+++ b/.eslintrc
@@ -36,6 +36,7 @@
     "block-scoped-var": 2,
     "no-duplicate-case": 2,
     "no-multi-spaces": 2,
+    "no-multiple-empty-lines": 2,
     "no-unreachable": 2,
     "react/prop-types": 0,
     "array-bracket-spacing": [
