--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-wxeap",
-  "version": "0.9.2",
+  "version": "1.0.0-beta0",
   "description": "cnwxsoft web framework",
   "scripts": {
     "pb": "npm run build && npm publish",
@@ -11,6 +11,9 @@
   "author": "cnwxsoft",
   "license": "MIT",
   "dependencies": {
+    "babel-runtime": "^6.9.2",
+    "react": "~15.4.1",
+    "react-dom": "~15.4.1",
     "antd-mobile": "^1.0.7",
     "babel-polyfill": "6.23.0",
     "dva": "^1.2.1",
@@ -20,14 +23,12 @@
     "rc-form": "^1.3.1",
     "rc-tween-one": "^1.1.2",
     "re-carousel": "^1.2.7",
-    "react": "^15.4.0",
-    "react-dom": "^15.4.0",
-    "react-pinch-zoom-pan": "^1.3.0",
-    "reactcss": "^1.1.2"
+    "react-pinch-zoom-pan": "^1.3.0"
   },
   "devDependencies": {
-    "babel-eslint": "^7.1.1",
+    "babel-cli": "^6.24.1",
     "babel-core": "^6.24.0",
+    "babel-eslint": "^7.1.1",
     "babel-loader": "^6.2.4",
     "babel-plugin-import": "^1.1.1",
     "babel-preset-es2015": "^6.6.0",
