--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "react-wxeap",
-  "version": "1.0.0-beta1",
+  "version": "1.0.0-beta4",
   "description": "cnwxsoft web framework",
   "scripts": {
     "pb": "npm run build && npm publish",
+    "pb-cmd": "npm run build-cmd && npm publish",
     "build": "npm run lint && cp -r src/* lib && babel src -d lib",
     "build-cmd": "npm run lint && xcopy src lib /y/s && babel src -d lib",
     "lint": "eslint --ext .js src --fix"
