--- a/package.json
+++ b/package.json
@@ -1,22 +1,22 @@
 {
   "name": "react-wxeap",
-  "version": "1.0.4",
+  "version": "1.1.0-alpha8",
   "description": "cnwxsoft web framework",
   "scripts": {
     "pb": "npm run build && npm publish",
     "pb-cmd": "npm run build-cmd && npm publish",
-    "build": "npm run lint && cp -r src/* lib && babel src -d lib",
+    "build": "npm run lint && rm -r lib/*  && cp -r src/* lib && babel src -d lib",
     "build-cmd": "npm run lint && xcopy src lib /y/s && babel src -d lib",
     "lint": "eslint --ext .js src --fix"
   },
-  "main": "lib/index.js",
+  "main": "lib/index",
   "author": "cnwxsoft",
   "license": "MIT",
   "dependencies": {
     "babel-runtime": "^6.9.2",
     "react": "~15.4.1",
     "react-dom": "~15.4.1",
-    "antd-mobile": "^1.0.7",
+    "antd-mobile": "^1.1.0",
     "babel-polyfill": "6.23.0",
     "dva": "^1.2.1",
     "mobile-detect": "^1.3.6",
