--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-wxeap",
-  "version": "1.1.0-beta0",
+  "version": "1.1.0-beta2",
   "description": "cnwxsoft web framework",
   "scripts": {
     "lint": "eslint --ext .js src --fix",
@@ -34,7 +34,8 @@
     "rc-form": "^1.3.1",
     "rc-tween-one": "^1.1.2",
     "re-carousel": "^1.2.7",
-    "react-pinch-zoom-pan": "^1.3.0"
+    "react-pinch-zoom-pan": "^1.3.0",
+    "redux-persist": "^4.6.0"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
