--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,16 @@
 {
-  "presets": [ "es2015", "react", "stage-0" ],
-  "plugins": [["import", { "style": "css", "libraryName": "antd-mobile" }]]
+  "presets": [
+    "es2015",
+    "react",
+    "stage-0"
+  ],
+  "plugins": [
+    [
+      "import",
+      {
+        "style": "css",
+        "libraryName": "antd-mobile"
+      }
+    ]
+  ]
 }
