--- a/package.json
+++ b/package.json
@@ -26,20 +26,25 @@
   },
   "license": "MIT",
   "dependencies": {
-    "babel-runtime": "^6.9.2",
-    "react": "~15.4.1",
-    "react-dom": "~15.4.1",
-    "antd-mobile": "^1.1.0",
+    "antd-mobile": "^1.1.3",
+    "babel-core": "^6.24.1",
+    "babel-eslint": "^7.2.3",
     "babel-polyfill": "6.23.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "babel-runtime": "^6.9.2",
     "dva": "^1.2.1",
     "mobile-detect": "^1.3.6",
     "moment": "2.18.1",
-    "rc-animate": "^2.3.3",
-    "rc-form": "^1.3.1",
-    "rc-tween-one": "^1.1.2",
+    "rc-animate": "^2.3.6",
+    "rc-form": "^1.3.2",
+    "rc-tween-one": "^1.2.5",
     "re-carousel": "^2.0.2",
+    "react": "~15.4.1",
+    "react-dom": "~15.4.1",
     "react-pinch-zoom-pan": "1.4.0",
-    "redux-persist": "^4.6.0"
+    "redux-persist": "^4.8.0"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
