--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-wxeap",
-  "version": "2.5.0",
+  "version": "2.6.0",
   "description": "cnwxsoft web framework",
   "scripts": {
     "lint": "eslint --ext .js src --fix",
@@ -26,7 +26,7 @@
   },
   "license": "MIT",
   "dependencies": {
-    "antd-mobile": "^1.1.3",
+    "antd-mobile": "1.1.2",
     "babel-core": "^6.24.1",
     "babel-eslint": "^7.2.3",
     "babel-polyfill": "6.23.0",
