--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   },
   "license": "MIT",
   "dependencies": {
-    "antd-mobile": "1.4.1",
+    "antd-mobile": "^1.4.1",
     "babel-core": "^6.24.1",
     "babel-eslint": "^7.2.3",
     "babel-polyfill": "6.23.0",
