--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-wxeap",
-  "version": "2.10.21",
+  "version": "2.11.1",
   "description": "cnwxsoft web framework",
   "scripts": {
     "lint": "eslint --ext .js src --fix",
@@ -53,9 +53,10 @@
     "babel-eslint": "^7.1.1",
     "babel-loader": "^6.2.4",
     "babel-plugin-import": "^1.1.1",
-    "babel-preset-es2015": "^6.6.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.5.0",
-    "babel-preset-stage-0": "^6.22.0",
+    "babel-preset-stage-0": "^6.24.1",
     "eslint": "^3.12.2",
     "eslint-plugin-react": "^6.8.0"
   }
