--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "react-wxeap",
-  "version": "2.13.0",
+  "version": "3.0.0-beta.0",
   "description": "cnwxsoft web framework",
   "scripts": {
     "lint": "eslint --ext .js src --fix",
     "pb": "npm run build && npm publish",
+    "pb-beta": "npm run build && npm publish --tag=beta",
     "pb-cmd": "npm run build-cmd && npm publish",
     "build": "npm run lint && npm run transfer && npm run compile",
     "transfer": "npm run clean && npm run copy",
@@ -48,6 +49,9 @@
     "lodash.clone": "^4.5.0"
   },
   "devDependencies": {
+    "@types/react": "^15.0.38",
+    "@types/react-dom": "^15.5.1",
+    "typescript": "~2.4.0",
     "babel-cli": "^6.24.1",
     "babel-core": "^6.24.0",
     "babel-eslint": "^7.1.1",
