--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-wxeap",
-  "version": "3.1.2",
+  "version": "3.1.3-beta.0",
   "description": "cnwxsoft web framework",
   "scripts": {
     "lint": "eslint --ext .js src --fix",
@@ -28,6 +28,8 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@types/react": "^15.0.38",
+    "@types/react-dom": "^15.5.1",
     "antd-mobile": "^1.4.1",
     "babel-core": "^6.24.1",
     "babel-eslint": "^7.2.3",
@@ -37,6 +39,7 @@
     "babel-preset-stage-0": "^6.24.1",
     "babel-runtime": "^6.9.2",
     "dva": "^1.2.1",
+    "lodash.clone": "^4.5.0",
     "mobile-detect": "^1.3.6",
     "moment": "2.18.1",
     "rc-animate": "^2.3.6",
@@ -45,11 +48,9 @@
     "re-carousel": "^2.0.2",
     "react": "~15.4.1",
     "react-dom": "~15.4.1",
+    "react-photoswipe": "^1.3.0",
     "react-pinch-zoom-pan": "1.4.0",
     "redux-persist": "^4.8.0",
-    "lodash.clone": "^4.5.0",
-    "@types/react": "^15.0.38",
-    "@types/react-dom": "^15.5.1",
     "typescript": "~2.4.0"
   },
   "devDependencies": {
