--- a/.eslintrc
+++ b/.eslintrc
@@ -15,7 +15,8 @@
   ],
   "globals": {
     "API": false,
-    "EAP": false
+    "EAP": false,
+    "EAP_PATH": false
   },
   "rules": {
     "no-alert": 2,
