--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-wxeap",
-  "version": "4.0.0-beta.7",
+  "version": "4.0.2",
   "description": "cnwxsoft web framework",
   "scripts": {
     "lint": "eslint --ext .js src --fix",
@@ -42,16 +42,11 @@
     "lodash.clone": "^4.5.0",
     "mobile-detect": "^1.3.6",
     "moment": "2.18.1",
-    "rc-animate": "^2.3.6",
     "rc-form": "^1.3.2",
-    "rc-tween-one": "^1.2.5",
-    "re-carousel": "^2.0.2",
     "react": "~15.4.1",
     "react-dom": "~15.4.1",
     "react-photoswipe": "^1.3.0",
-    "react-pinch-zoom-pan": "1.4.0",
-    "redux-persist": "^4.8.0",
-    "typescript": "~2.4.0"
+    "redux-persist": "~4.8.0"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
