--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-wxeap",
-  "version": "4.1.0-beta.0",
+  "version": "4.1.0-beta.1",
   "description": "cnwxsoft web framework",
   "scripts": {
     "lint": "eslint --ext .js src --fix",
@@ -46,7 +46,8 @@
     "react": "~15.4.1",
     "react-dom": "~15.4.1",
     "react-photoswipe": "^1.3.0",
-    "redux-persist": "~4.8.0"
+    "redux-persist": "~4.8.0",
+    "jQuery": "1.7.4"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
