--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "react-wxeap",
-  "version": "4.1.0-beta.1",
+  "version": "4.1.0-rc.3",
   "description": "cnwxsoft web framework",
   "scripts": {
     "lint": "eslint --ext .js src --fix",
     "pb": "npm run build && npm publish",
     "pb-beta": "npm run build && npm publish --tag=beta",
+    "pb-rc": "npm run build && npm publish --tag=rc",
     "pb-cmd": "npm run build-cmd && npm publish",
     "build": "npm run lint && npm run transfer && npm run compile",
     "transfer": "npm run clean && npm run copy",
@@ -47,7 +48,7 @@
     "react-dom": "~15.4.1",
     "react-photoswipe": "^1.3.0",
     "redux-persist": "~4.8.0",
-    "jQuery": "1.7.4"
+    "jquery": "^3.2.1"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
