--- a/example/package.json
+++ b/example/package.json
@@ -15,7 +15,7 @@
     "babel-runtime": "^6.9.2",
     "react": "~15.4.1",
     "react-dom": "~15.4.1",
-    "react-wxeap": "^4.1.0-beta.0"
+    "react-wxeap": "^4.1.0-rc.7"
   },
   "devDependencies": {
     "babel-eslint": "^7.1.1",
